@@ -25,8 +25,8 @@ package org.jacp.api.workbench;
 import java.util.List;
 
 
+import org.jacp.api.component.IPerspective;
 import org.jacp.api.launcher.Launcher;
-import org.jacp.api.perspective.IPerspective;
 
 
 /**
